# pytemplate

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: _scripts.py  main.py
